# energy_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __main__.py  commandsworker.py  config_reader.py
bot/db/: alembic.ini  db.py  models.py  test.py
bot/db/migrations/: env.py
bot/filters/: admin.py
bot/handlers/: __init__.py  admin_no_reply.py  adminmode.py  unsupported_reply.py  usermode.py
bot/keyboards/: admin_btns.py  user_btns.py
bot/locales/ru/: errors.ftl  strings.ftl
bot/states/: __init__.py  dialog.py  elements.py
